test/typeerrors/Examples/FbRight.hs
module FbRight where

f 0 = "gans"
f x = True
